Fixed loads of warnings