@@ -152,7 +152,7 @@ public class LabelRoutingMulticast extends Thread implements MessageUpcall {
                     if (ibisID != null) {
                         ibis.registry().maybeDead(ibisID);
                     }
-                    diedmachines.put(id, new Long(System.currentTimeMillis()));
+                    diedmachines.put(id, Long.valueOf(System.currentTimeMillis()));
                 } catch (Exception e2) {
                     logger.info("Failed to inform nameserver! " + e2);
                     // ignore
